name:                hayoo-cli
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/hunt-framework/hayoo-cli#readme
license:             BSD3
license-file:        LICENSE
author:              Matthias Metzger
maintainer:          example@example.com
copyright:           2017 Matthias Metzger
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hayoo-cli
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , optparse-applicative
                     , hayoo-core
                     , hayoo-indexer
                     , megaparsec
                     , text
