name:                hayoo-core
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hayoo-core#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hayoo.Core.DeclInfo
                     , Hayoo.Core.PackageInfo
                     , Hayoo.Core.Signature
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , text
                     , megaparsec
                     , hxt-charproperties
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hayoo-core
