name:                hayoo-indexer
version:             0.1.0.0
-- synopsis:
description:         An indexer, which turns hoogle and cabal files into hunt compatible indexing
homepage:            https://github.com/githubuser/hayoo-indexer#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Matthias Metzger, Alex Biehl
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hayoo.Indexer
                     , Hayoo.Indexer.Schema
                     , Hayoo.Indexer.DeclInfo.Hoogle
                     , Hayoo.Indexer.DeclInfo.Index
                     , Hayoo.Indexer.PackageInfo.Cabal
                     , Hayoo.Indexer.PackageInfo.Index
                     , Hayoo.Indexer.Internal
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , aeson
                     , aeson-pretty
                     , Cabal
                     , conduit
                     , conduit-combinators
                     , conduit-extra
                     , filepath
                     , directory
                     , hunt-searchengine
                     , tar-conduit
                     , hayoo-core
                     , megaparsec
                     , resourcet
                     , text
                     , time
                     , transformers
                     , vector
  default-language:    Haskell2010

test-suite hayoo-indexer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Hayoo.Indexer.Hoogle.ParseTest
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , hayoo-core
                     , hayoo-indexer
                     , hspec
                     , hspec-megaparsec
                     , megaparsec
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hunt-framework/hayoo/hayoo-indexer
