name:                hayoo-servant
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/hunt-framework/hayoo
license:             MIT
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable hayoo-servant
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Hayoo.App
                     , Hayoo.App.Metrics
                     , Hayoo.Types
                     , Hayoo.API
                     , Hayoo.Server
  build-depends:       base >= 4.7 && < 5
                     , optparse-applicative
                     , aeson
                     , ekg-core
                     , ekg-json 
                     , hayooLib
                     , hunt-client
                     , hunt-searchengine
                     , mtl
                     , parsec
                     , servant
                     , servant-server
                     , servant-client
                     , scientific
                     , text
                     , time
                     , wai
                     , warp
