name:                hayoo-server
version:             0.1.0.0
synopsis:            Hayoo! server implementation with servant
description:         Please see README.md
homepage:            https://github.com/hunt-framework/hayoo
license:             MIT
license-file:        LICENSE
author:              Matthias Metzger
maintainer:          example@example.com
copyright:           2016 Matthias Metzger, Alex Biehl
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable hayoo-server
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Hayoo.App
                     , Hayoo.App.Error
                     , Hayoo.App.Metrics
                     , Hayoo.App.Page
                     , Hayoo.App.Types
                     , Hayoo.API
                     , Hayoo.Server
                     , Hayoo.Server.Configuration
                     , Hayoo.Internal.Helpers
  build-depends:       base >= 4.7 && < 5
                     , blaze-html
                     , blaze-markup
                     , blaze-svg
                     , optparse-applicative
                     , aeson
                     , ekg-core
                     , ekg-json 
                     , hayooLib
                     , htoml
                     , hunt-client
                     , hunt-searchengine
                     , mtl
                     , parsec
                     , servant
                     , servant-blaze
                     , servant-server
                     , servant-client
                     , scientific
                     , shakespeare
                     , blaze-html
                     , text
                     , time
                     , wai
                     , warp
