name:          hayooIndexer
version:       2.0.0.0
license:       MIT
license-file:  LICENSE
author:        Uwe Schmidt
copyright:     Copyright (c) 2007 - 2014 Uwe Schmidt
maintainer:    Uwe Schmidt <uwe@fh-wedel.de>
stability:     stable
category:      Text, Data
synopsis:      The Hayoo! search engine for Haskell API search on hackage
homepage:      http://github.com/hunt-framework/hayoo
description:   The indexer part of the Hayoo search engine
cabal-version: >=1.6
build-type:    Simple
-- tested-with:  ghc-7.8.2

-- ------------------------------------------------------------

flag network-uri
   description: Get Network.URI from the network-uri package
   default: True

executable hayooIndexer
  main-is:      HayooIndexer.hs

  other-modules:   Hayoo.FunctionInfo
                 , Hayoo.HackagePackage
                 , Hayoo.Haddock
                 , Hayoo.IndexConfig
                 , Hayoo.PackageArchive
                 , Hayoo.PackageInfo
                 , Hayoo.PackageRank
                 , Hayoo.ParseSignature
                 , Hayoo.Signature
                 , Hayoo.URIConfig

                 , Hayoo.Hunt.ApiDocument
                 , Hayoo.Hunt.FctIndexerCore
                 , Hayoo.Hunt.FctRankTable
                 , Hayoo.Hunt.IndexSchema
                 , Hayoo.Hunt.Output
                 , Hayoo.Hunt.PkgIndexerCore
                 , Hayoo.Hunt.PkgRankTable

  build-depends:   base                   >= 4
                 , aeson                  >= 0.6
                 , aeson-pretty           >= 0.7
                 , binary                 >= 0.5
                 , bytestring             >= 0.9
                 , bzlib                  >= 0.4
                 , containers             >= 0.4.2
                 , data-stringmap         >= 0.9.3
                 , deepseq                >= 1.2
                 , directory              >= 1.1
                 , filepath               >= 1
                 -- , Hayoo-Indexer-Lib      >= 1.3
                 , hayooLib               >= 0.1
                 , hunt-searchengine      >= 0.2.0.0
                 , hunt-crawler           >= 0.0.0.1
                 , HTTP                   >= 4000.2
                 , hxt                    >= 9.1
                 , hxt-cache              >= 9
                 , hxt-charproperties     >= 9
                 , hxt-curl               >= 9
                 , hxt-http               >= 9
                 , hxt-regex-xmlschema    >= 9
                 , hxt-xpath              >= 9.1
                 , mtl                    >= 2
                 , murmur-hash
                 , old-time               >= 1
                 , old-locale             >= 1
                 , parsec                 >= 2.1
                 , process                >= 1
                 , tar                    >= 0.3
                 , text                   >= 0.11
                 , time                   >= 1.4
                 , transformers           >= 0.3
                 , unordered-containers   >= 0.2
                 , zlib                   >= 0.5

  if flag(network-uri)
     build-depends: network-uri >= 2.6, network >= 2.6
  else
     build-depends: network-uri < 2.6, network < 2.6

  hs-source-dirs: src

  ghc-options:   -threaded
                 -rtsopts
                 -Wall
                 -fwarn-tabs
                 -funbox-strict-fields

-- ------------------------------------------------------------

source-repository head
  type:     git
  location: http://github.com/hunt-framework/hayoo

-- ------------------------------------------------------------
