name:          newHayooIndexer
version:       3.0.1.0
license:       MIT
license-file:  LICENSE
author:        Erik Rantapaa
copyright:     Copyright (c) 2007 - 2014 Uwe Schmidt
maintainer:    Erik Rantapaa <erantapaa@gmail.com>
stability:     stable
category:      Text, Data
synopsis:      The Hayoo! search engine for Haskell API search on hackage
homepage:      http://github.com/hunt-framework/hayoo
description:   The indexer part of the Hayoo search engine
cabal-version: >=1.10
build-type:    Simple
data-files:    00-schema.js

library
  hs-source-dirs:      src
  exposed-modules:     PackageInfo
                       , TarUtil
                       , JsonUtil
                       , Hayoo.PackageRank
                       , Hayoo.FunctionInfo
                       , Hayoo.ParseSignature
                       , PkgIndexerCore
                       , FctIndexerCore
                       , HoogleProcessLine
                       , ParseCabal
                       , ProcessCabal
                       , ParseHoogle
                       , TestHoogle
                       , ProcessHoogle
                       , ProcessLine
                       , MainCabal
                       , MainHoogle
  build-depends:       base >= 4.8 && < 5
                     , containers
                     , bytestring
                     , text
                     , binary
                     , deepseq
                     , unordered-containers
                     , aeson
                     , text-binary
                     , time
                     , data-default
                     , Cabal
                     , transformers
                     , tar
                     , zlib
                     , bzlib
                     , pipes
                     , pipes-parse
                     , pretty-show
                     , pipes-group
                     , unordered-containers
                     , lens
                     , aeson-pretty
                     , vector
                     , scientific
                     , mtl
                     , parsec
                     , hxt-charproperties
                     , filepath
                     , directory
  default-language:    Haskell2010

executable newHayooIndexer
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, optparse-applicative, newHayooIndexer, directory
  other-modules:       Paths_newHayooIndexer
  default-language:    Haskell2010

test-suite newHayooIndexer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , newHayooIndexer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/name/project
